# koodi-101-rust-backend

./: .gitignore  Cargo.toml  LICENSE.md  README.md  Rocket.toml
migrations/2023-01-12-111516_create_chat/: down.sql  up.sql
src/: lib.rs  main.rs  model.rs  schema.rs
src/handlers/: chat.rs
