[package]
name = "koodi-101-backend"
version = "0.1.0"
edition = "2021"

[lib]
name="lib"
path="src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.140", features = ["derive"] }
diesel = "1.4.1"
rocket_sync_db_pools = {version="0.1.0-rc.2", features=["diesel_postgres_pool"]}
